# LinuxAudioSwitcher

./: .gitignore  CLAUDE.md  README.md  install.sh  linux-audio-switcher.desktop  linux-audio-switcher.service  pyproject.toml
linux_audio_switcher/: __main__.py  audio.py  carousel.py  cli.py  config.py  notify.py  tray.py
tests/: test_audio.py  test_carousel.py  test_cli_config.py  test_config.py  test_notify.py  test_tray.py
