[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-audio-switcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.scripts]
las = "linux_audio_switcher.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["linux_audio_switcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
