[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-audio-switcher"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = []
# Runtime deps are system packages, not pip:
#   gir1.2-xapp-1.0   (tray icon — pre-installed on Cinnamon/Linux Mint)
#   gir1.2-gtk-3.0    (pre-installed)
#   pactl / pipewire  (pre-installed)

[project.scripts]
las = "linux_audio_switcher.cli:main"

[project.optional-dependencies]
dev   = ["pytest>=7"]
# Used automatically by install.sh on non-Cinnamon desktops.
# Install manually: pip install '.[tray]'  or  pipx inject linux-audio-switcher pystray Pillow
tray  = ["pystray>=0.19", "Pillow>=10.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["linux_audio_switcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
